--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -4,8 +4,31 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My First HTML Site</title>
+  <style>
+    .footer, h1, h2, h3 {
+      color:navy
+    }
+    p {
+      color: #1e1e1e;
+    }
+  </style>
 </head>
 <body>
-  <p>ALX FrontEnd Project </p>
+  <h1>ALX FrontEnd Track</h1>
+  <p> The ALX bootcamp has been an interesting experience. </p>
+  <br>
+  <h2>About Me</h2>
+  <p> My name is ...<i>(too lazy to type)</i> </p>
+  <br>
+  <h3>Whoever finds this...</h3>
+  <figure><a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">
+    <img height="200px" src="coding-meme.png" alt="programming advice"></a>
+    <figcaption>Don't be this guy #DoHardThings</figcaption>
+  </figure>
+  
+  <p> Keep going and crush front-end. </p>
+  <b>Brace up for JS!</b>
+  <br><br>
+  <p class="footer">&copy;MS</p>
 </body>
 </html>
