--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -12,14 +12,47 @@
   </header>
   <nav>
     <ul>
-      <li>Introduction</li>
-      <li>Projects</li>
-      <li>About Me</li>
-      <li>Contact</li>
+      <li><a href="#introduction">Introduction</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#about">About Me</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
-  <section></section>
-  <article></article>
-  <footer></footer>
+  <section id="Introduction">
+    <h2>Introduction</h2>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae culpa asperiores eligendi soluta quia, nihil quasi sapiente neque eum dolore?</p>
+  </section>
+  <section id="projects">
+    <h2>Projects</h2>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+    <article class="project">
+      <h3>Project 1</h3>
+      <p>Description for project 1</p>
+      <a href="" target="_blank">Project Link 1</a>
+    </article>
+    <article class="project">
+      <h3>Project 2</h3>
+      <p>Description for project 2</p>
+      <a href="" target="_blank">Project Link 2</a>
+    </article>
+    <article class="project">
+      <h3>Project 3</h3>
+      <p>Description for project 3</p>
+      <a href="" target="_blank">Project Link 3</a>
+    </article>
+  </section>
+  <section id="about">
+    <h2>About Me</h2>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae culpa asperiores eligendi soluta quia, nihil quasi sapiente neque eum dolore?</p>
+  </section>
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+    <a href="maito:themichaelsteve@gmail.com" target="_blank">Send a message</a>
+    <a href="https://github.com/TheMSFlow" target="_blank">GitHub</a>
+  </section>
+  <footer>
+    <p>&copy;MS 2024</p>
+  </footer>
 </body>
 </html>
