updated index and tweet html files

--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -4,17 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My First HTML Site</title>
-  <style>
-    .footer, h1, h2, h3 {
-      color:navy
-    }
-    p {
-      color: #1e1e1e;
-    }
-    th, td{
-      border: 1px, solid, black;
-    }
-  </style>
+  <link href="base.css" rel="stylesheet">
+  <link href="styles.css" rel="stylesheet">
 </head>
 <body>
   <header>
