--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -11,8 +11,8 @@
   <header>
     <nav>
       <ul>
-        <li><a href="/My_First_Portfolio/html_basic/index.html">Homepage</a></li>
-        <li><a href="/My_First_Portfolio/html_basic/tweets.html">Tweets</a></li>
+        <li><a href="index.html">Homepage</a></li>
+        <li><a href="tweets.html">Tweets</a></li>
       </ul>
     </nav>
   </header>
