--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -6,12 +6,14 @@
   <title>My First HTML Site</title>
 </head>
 <body>
+  <header>
   <nav>
     <ul>
       <li><a href="/My_First_Portfolio/html_basic/index.html">Homepage</a></li>
       <li><a href="/My_First_Portfolio/html_basic/tweets.html">Tweets</a></li>
     </ul>
-  </nav>
+  </nav>  
+</header>
   <blockquote class="twitter-tweet"><p lang="en" dir="ltr">At dawn from the gateway to Mars, the launch of Starship’s second flight test <a href="https://t.co/ffKnsVKwG4">pic.twitter.com/ffKnsVKwG4</a></p>&mdash; SpaceX (@SpaceX) <a href="https://twitter.com/SpaceX/status/1732824684683784516?ref_src=twsrc%5Etfw">December 7, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </body>
 </html>
