--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -17,6 +17,7 @@
     </nav>
   </header>
   <main>
+    <article>
       <h1>ALX FrontEnd Track</h1>
       <p> The ALX bootcamp has been an interesting experience. </p>
       <br>
@@ -62,6 +63,7 @@
           </tr>
         </tbody>
       </table>
+    </article>
     <aside>
       <p>“placeholder to add comment thread later”</p>
     </aside>
