--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -7,11 +7,14 @@
   <link href="base.css" rel="stylesheet">
   <link href="styles.css" rel="stylesheet">
 </head>
-<body>
+<body class="works_on_smartphone">
   <header>
-    <nav>
+    <nav class="header">
+      <div>
+        <a href="#"><img src="alx-logo.svg" width="50px"></a>
+      </div>
       <ul>
-        <li><a href="index.html">Homepage</a></li>
+        <li class="link1"><a href="index.html">Home</a></li>
         <li><a href="tweets.html">Tweets</a></li>
       </ul>
     </nav>
@@ -26,38 +29,41 @@
       <br>
       <h3>Whoever finds this...</h3>
       <figure><a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">
-        <img height="200px" src="coding-meme.png" alt="programming advice"></a>
+        <img height="400px" src="coding-meme.png" alt="programming advice"></a>
         <figcaption>Don't be this guy #DoHardThings</figcaption>
       </figure>
 
-      <p> Keep going and crush front-end. </p>
-      <b>Brace up for JS!</b>
-        <blockquote width="250px" class="twitter-tweet"><p lang="en" dir="ltr">At dawn from the gateway to Mars, the launch of Starship’s second flight test <a href="https://t.co/ffKnsVKwG4">pic.twitter.com/ffKnsVKwG4</a></p>&mdash; SpaceX (@SpaceX) <a href="https://twitter.com/SpaceX/status/1732824684683784516?ref_src=twsrc%5Etfw">December 7, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      <div class="space"></div>
+      <div>
+        <blockquote width="400px" class="twitter-tweet"><p lang="en" dir="ltr">At dawn from the gateway to Mars, the launch of Starship’s second flight test <a href="https://t.co/ffKnsVKwG4">pic.twitter.com/ffKnsVKwG4</a></p>&mdash; SpaceX (@SpaceX) <a href="https://twitter.com/SpaceX/status/1732824684683784516?ref_src=twsrc%5Etfw">December 7, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></div>
   
-      <table>
+        <div class="space"></div>
+
+      <table class="table">
+        <br>
         <thead>
-          <th>Name</th>
-          <th>Age</th>
-          <th>Country</th>
+          <th scope="col">Name</th>
+          <th scope="col">Age</th>
+          <th scope="col">Country</th>
         </thead>
         <tbody>
           <tr>
-            <td>John</td>
+            <th scope="row">John</th>
             <td>25</td>
             <td>USA</td>
           </tr>
           <tr>
-            <td>Emily</td>
+            <th scope="row">Emily</th>
             <td>28</td>
             <td>Canada</td>
           </tr>
           <tr>
-            <td>Michael</td>
+            <th scope="row">Michael</th>
             <td>32</td>
             <td>Australia</td>
           </tr>
           <tr>
-            <td>Sophia</td>
+            <th scope="row">Sophia</th>
             <td>21</td>
             <td>UK</td>
           </tr>
@@ -69,7 +75,7 @@
     </aside>
   </main>
   <footer>
-    <p class="footer">Made by &copy;MS - <a href="https://intranet.alxswe.com/users/my_profile" target="_blank">Profile</a></p>
+    <p>Made by &copy;MS - <a href="#" target="_blank">Profile</a></p>
   </footer>
 </body>
 </html>
